@@ -7,6 +7,7 @@
                          Benjamin Siband, and Kim Bruning
                2007 Zoltan Bartko
                2008 Andrzej Sawula, Alex Buloichik
+               2009 Didier Briel
                Home page: http://www.omegat.org/
                Support center: http://groups.yahoo.com/group/OmegaT/
 
@@ -60,6 +61,7 @@ import org.omegat.util.gui.SwingWorker;
  * @author Zoltan Bartko - bartkozoltan@bartkozoltan.com
  * @author Andrzej Sawula
  * @author Alex Buloichik (alex73mail@gmail.com)
+ * @author Didier Briel
  */
 public class MainWindowMenuHandler {
     private final MainWindow mainWindow;
@@ -159,6 +161,10 @@ public class MainWindowMenuHandler {
                 return;
             }
         }
+
+        // Save the list of learned and ignore words
+        ISpellChecker sc = Core.getSpellChecker();
+        sc.saveWordLists();
 
         new SwingWorker<Object>() {
             protected Object doInBackground() throws Exception {
